Set up the screen with grass textures, tree still a bit fucked, but will figure it out. Also changed the values of gluOrtho2D in order to see more sky (because there are going to be ducks and shit to shoot.

--- a/.cproject
+++ b/.cproject
@@ -44,6 +44,7 @@
 								</option>
 								<option id="gnu.cpp.link.option.libs.138624217" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="freeglut"/>
+									<listOptionValue builtIn="false" value="glaux"/>
 									<listOptionValue builtIn="false" value="glu32"/>
 									<listOptionValue builtIn="false" value="opengl32"/>
 									<listOptionValue builtIn="false" value="winmm"/>
